# brain-segment

./: .gitignore  Makefile  Pipfile  README.md  environment.yml  environment.yml.old  environment_server.yml  pyproject.toml  res_2853054.txt  run_training.sbatch  train.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: env_setup.md  github_workflow.md  investigation_results.md  nn_architectures_investigation.md  optimizations.md  pipenv_env.md  setup_jupyter.md  setup_ssh.md  train_job.md
src/: benchmark.py  model.py  onnx_export.py  train.py  utils.py
src/models/: model_0.1.pth
src/models/save/: model_0.1.pth
src/notebooks/: .~UNet.ipynb  SegResNet.ipynb  UNETR_monai_tut.ipynb  UNet.ipynb  data_v2.ipynb  monai_tutorial.ipynb
src/onnx/: dummy.txt
