[tool.poetry]
name = "brain-segment"
version = "0.1.0"
description = ""
authors = ["Dzmitry Hramyka <grom.dima.grom@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
monai = "^1.3.0"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
